--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,13 +11,30 @@ License: GPLv3.0
 /* ------------------------------------------------------------------------- *
 *  Reset
 * -------------------------------------------------------------------------- */
+@import 'bulma.scss';
+@import '../icons/style.scss';
+
 button {
+  display: inline-flex;
+  justify-content: center;
+  padding: 0;
+  font-size: 1.01em;
   background-color: transparent;
-  border: none;
   cursor: pointer;
   outline: none;
-  padding: 0;
   appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+button.control {
+  padding-bottom: calc(.47em - 1px);
+  padding-top: calc(.47em - 1px);
+  padding-left: .75em;
+  padding-right: .75em;
+  border: 1px solid #444;
+  border-radius: 2px;
+  border-color: #dbdbdb;
+  color: #363636;
 }
 .button {
   height: auto;
@@ -26,7 +43,7 @@ button {
   margin: 0 auto !important;
 }
 html body {
-  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif
+  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
 }
 a {
   color: #00619F;
@@ -202,6 +219,47 @@ a {
     padding: .36em .7em;
   }
 }
+.icon {
+  margin-right: .1em;
+}
+
+.features-list {
+  justify-content: space-between;
+}
+.addon-features-heading {
+  padding: 0 1em;
+  color: #222;
+  text-transform: uppercase;
+  letter-spacing: .18em;
+  font-weight: 600;
+}
+:lang(ja) .addon-features-heading {
+  letter-spacing: 0;
+}
+
+/*   Content : Buttons
+/* -------------------------------------------------- */
+.download-link {
+  background-color: #0B5B8D;
+  border-color: transparent;
+  border-radius: 3px;
+  color: #fff;
+  &:hover { background-color: #0B5B8D - #323232; color: #fff; }
+}
+.demo-link {
+  background-color: #00d1b2;
+  border-color: transparent;
+  border-radius: 3px;
+  color: #fff;
+  &:hover { background-color: #00d1b2 - #1f1f1f; color: #fff; }
+}
+.child-link {
+  background-color: transparent;
+  border: .09em solid #363636;
+  border-radius: 3px;
+  color: #fff;
+  &:hover { background-color: #565656; color: #fff; }
+}
 
 /*   Image
 /* -------------------------------------------------- */
@@ -264,6 +322,10 @@ a {
 
 /*   Add-Ons
 /* -------------------------------------------------- */
+.addons-list {
+  justify-content: center;
+}
+
 .addon {
   display: block;
   text-align: center;
@@ -274,13 +336,13 @@ a {
   }
 }
 
-
-
 .addon-title {
+  margin: .3em 0;
+  font-size: 1.16em;
   font-weight: 600;
 }
 .addon-description {
-  font-size: .9rem;
+  font-size: .87rem;
 }
 
 
@@ -298,4 +360,26 @@ a {
       color: #009881;
     }
   }
+
+  .container {
+    display: flex;
+    align-items: center
+  }
+  .copyright {
+    flex-shrink: 1;
+  }
+  .social-links {
+    flex-grow: 1;
+    justify-content: flex-end;
+    display: flex;
+    align-items: center;
+    padding: 0 .7em;
+    .fa { font-size: 1.9em; }
+    & > li:not(:first-child) { margin-left: .5em; }
+
+  }
+}
+
+.modal-search-form {
+  display: none;
 }
