--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,8 +5,8 @@ Template: coldbox
 Description: Official site of the Coldbox theme
 Author: Mirucon
 Text Domain: official
-Version: 1.0.1
-License: GPLv3.0
+Version: 1.0.2
+License: GPL-2.0+
 */
 /* ------------------------------------------------------------------------- *
 *  Reset
