--- a/sass/style.scss
+++ b/sass/style.scss
@@ -401,6 +401,13 @@ a {
   }
 }
 
+html body .screen-reader-text { position: absolute;	width: 1px; height: 1px; clip: rect(1px, 1px, 1px, 1px); overflow: hidden;	}
+
+
+.back-to-top {
+  display: none;
+}
+
 .modal-search-form {
   display: none;
 }
