--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,6 +14,8 @@ License: GPL-2.0+
 @import 'bulma.scss';
 @import '../icons/style.scss';
 
+html body .screen-reader-text{clip:rect(1px,1px,1px,1px);height:1px;overflow:hidden;position:absolute;width:1px}
+
 button {
   display: inline-flex;
   justify-content: center;
